tests/compile-fail/socket_dropped_before_buffer.stderr
error[E0505]: cannot move out of `socket` because it is borrowed
  --> tests/compile-fail/socket_dropped_before_buffer.rs:14:10
   |
7  |     let socket = BindableNethunsSocket::open(opt)
   |         ------ binding `socket` declared here
...
12 |     let packet = socket.recv().unwrap();
   |                  ------ borrow of `socket` occurs here
13 |     let buffer = packet.packet();
14 |     drop(socket);
   |          ^^^^^^ move out of `socket` occurs here
15 |     drop(buffer);
   |          ------ borrow later used here
